Refactor CI workflow by removing dependency installation
Removed installation of dependencies and cloning of Wine source from the CI workflow.

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -19,19 +19,7 @@ jobs:
         uses: docker/setup-qemu-action@v2
         with:
           platforms: aarch64
-
-      - name: Install dependencies
-        run: |
-          sudo dpkg --add-architecture arm64
-          sudo apt update
-          sudo apt install -y \
-            build-essential git clang lld \
-            libc6:arm64 libfreetype6:arm64 \
-            libx11-6:arm64 libxcb1:arm64 \
-            libxext6:arm64 pkg-config
-
-      - name: Clone Wine source
-        run: |
+      - run: |
           git clone --depth 1 --branch "wine-11.1" \
             https://gitlab.winehq.org/wine/wine.git wine-src
 
