--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -19,6 +19,30 @@ jobs:
         uses: docker/setup-qemu-action@v2
         with:
           platforms: aarch64
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+
+          # Essential build tools
+          sudo apt-get install -y \
+            build-essential clang llvm lld pkgconf git autoconf automake \
+            libtool flex bison gettext
+
+          # Minimum libraries needed by Wine
+          sudo apt-get install -y \
+            libsdl2-dev libvulkan-dev libvulkan1 libx11-dev libxext-dev \
+            libxrandr-dev libxrender-dev libxcursor-dev libxi-dev \
+            libfreetype6-dev libfontconfig-dev libdbus-1-dev \
+            libudev-dev libasound2-dev libcapi20-dev libusb-1.0-0-dev \
+            libpcap-dev libgnutls28-dev libgphoto2-dev libkrb5-dev \
+            libpulse-dev
+
+          # Optional but recommended… helps avoid missing headers at configure
+          sudo apt-get install -y \
+            libsqlite3-dev libosmesa6-dev libgstreamer1.0-dev \
+            libgstreamer-plugins-base1.0-dev libunwind-dev
+
       - run: |
           git clone --depth 1 --branch "wine-11.1" \
             https://gitlab.winehq.org/wine/wine.git wine-src
@@ -34,6 +58,7 @@ jobs:
           export CFLAGS="-march=armv8.2-a+fp16+dotprod -O3 -fno-plt"
           export CXXFLAGS="$CFLAGS"
           export LDFLAGS="-fuse-ld=lld"
+
           ./configure \
             --enable-archs=arm64ec,aarch64 \
             --host=arm64ec-w64-mingw32 \
@@ -79,7 +104,6 @@ jobs:
           EOF
 
           chmod +x wine-arm64ec-wcp/arch/arm64ec/etc/env.sh
-
 
       - name: Upload .wcp artifact
         uses: actions/upload-artifact@v4
