--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -20,28 +20,25 @@ jobs:
         with:
           platforms: aarch64
 
-      - name: Install dependencies
+      - name: Install build dependencies
         run: |
           sudo apt-get update
-
-          # Essential build tools
           sudo apt-get install -y \
             build-essential clang llvm lld pkgconf git autoconf automake \
-            libtool flex bison gettext
-
-          # Minimum libraries needed by Wine
-          sudo apt-get install -y \
-            libsdl2-dev libvulkan-dev libvulkan1 libx11-dev libxext-dev \
-            libxrandr-dev libxrender-dev libxcursor-dev libxi-dev \
-            libfreetype6-dev libfontconfig-dev libdbus-1-dev \
-            libudev-dev libasound2-dev libcapi20-dev libusb-1.0-0-dev \
-            libpcap-dev libgnutls28-dev libgphoto2-dev libkrb5-dev \
-            libpulse-dev
-
-          # Optional but recommended… helps avoid missing headers at configure
-          sudo apt-get install -y \
+            libtool flex bison gettext \
+            libsdl2-dev libvulkan-dev libx11-dev libxext-dev libxrandr-dev \
+            libxrender-dev libxcursor-dev libxi-dev libfreetype6-dev \
+            libfontconfig-dev libdbus-1-dev libudev-dev libasound2-dev \
+            libcapi20-dev libusb-1.0-0-dev libgnutls28-dev libpulse-dev \
             libsqlite3-dev libosmesa6-dev libgstreamer1.0-dev \
             libgstreamer-plugins-base1.0-dev libunwind-dev
+
+      - name: Install llvm-mingw cross toolchain
+        run: |
+          wget https://github.com/mstorsjo/llvm-mingw/releases/download/20251216/llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64.tar.xz
+          tar xf llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64.tar.xz
+          sudo mv llvm-mingw-20251216-ucrt /opt/llvm-mingw
+          echo "/opt/llvm-mingw/bin" >> $GITHUB_PATH
 
       - run: |
           git clone --depth 1 --branch "wine-11.1" \
@@ -50,11 +47,12 @@ jobs:
       - name: Configure Wine build
         working-directory: wine-src
         run: |
-          export CC=clang
-          export CXX=clang++
+          export CC=aarch64-w64-mingw32-clang
+          export CXX=aarch64-w64-mingw32-clang++
           export AR=llvm-ar
-          export LD=ld.lld
+          export LD=lld
           export RANLIB=llvm-ranlib
+          export STRIP=llvm-strip
           export CFLAGS="-march=armv8.2-a+fp16+dotprod -O3 -fno-plt"
           export CXXFLAGS="$CFLAGS"
           export LDFLAGS="-fuse-ld=lld"
