--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -112,4 +112,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wine-arm64ec-wcp
-          pat
+          path: wine-arm64ec-wcp
