--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -32,13 +32,14 @@ jobs:
             libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev \
             libunwind-dev
 
-      - name: Install LLVM-MinGW cross toolchain
+      - name: Download latest llvm-mingw cross-toolchain
         run: |
-          # Загрузка cross-toolchain tarball (cборщик под Linux)
-          wget https://github.com/mstorsjo/llvm-mingw/releases/download/20251216/llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64.tar.xz
-          tar xf llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64.tar.xz
-          # Перемещаем в /opt
-          sudo mv llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64 /opt/llvm-mingw
+          TAG="20251216"
+          CRTPKG="ucrt"
+          DISTRO="ubuntu-22.04-x86_64"
+          wget https://github.com/mstorsjo/llvm-mingw/releases/download/${TAG}/llvm-mingw-${TAG}-${CRTPKG}-${DISTRO}.tar.xz
+          tar xf llvm-mingw-${TAG}-${CRTPKG}-${DISTRO}.tar.xz
+          sudo mv llvm-mingw-${TAG}-${CRTPKG}-${DISTRO} /opt/llvm-mingw
           echo "/opt/llvm-mingw/bin" >> $GITHUB_PATH
 
       - name: Clone Wine source
@@ -48,17 +49,18 @@ jobs:
       - name: Configure Wine build
         working-directory: wine-src
         run: |
-          # Используем clang из llvm-mingw
           export PATH="/opt/llvm-mingw/bin:$PATH"
 
           export CC=aarch64-w64-mingw32-clang
           export CXX=aarch64-w64-mingw32-clang++
+
           export AR=aarch64-w64-mingw32-llvm-ar
           export LD=aarch64-w64-mingw32-llvm-ld
           export RANLIB=aarch64-w64-mingw32-llvm-ranlib
           export STRIP=aarch64-w64-mingw32-llvm-strip
 
-          export CFLAGS="-O2 -fno-plt"
+          # Включаем аппаратную плавающую точку явно
+          export CFLAGS="-O2 -march=armv8.2-a+fp+simd -funwind-tables"
           export CXXFLAGS="$CFLAGS"
           export LDFLAGS="-fuse-ld=lld"
 
