Enhance CI for ARM64EC Wine cross-compilation
Refactor LLVM MinGW environment setup and improve Wine build configuration.

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build_arm64ec_wine:
     runs-on: ubuntu-latest
+    env:
+      LLVM_MINGW: ${{ github.workspace }}/llvm-mingw
 
     steps:
       - name: Checkout repository
@@ -32,23 +34,28 @@ jobs:
         run: |
           TAG=$(curl -s https://api.github.com/repos/mstorsjo/llvm-mingw/releases/latest | jq -r .tag_name)
           echo "Using llvm-mingw tag: $TAG"
-
           wget https://github.com/mstorsjo/llvm-mingw/releases/download/${TAG}/llvm-mingw-${TAG}-ucrt-ubuntu-22.04-x86_64.tar.xz -O llvm-mingw.tar.xz
           tar xf llvm-mingw.tar.xz
           mv llvm-mingw-${TAG}-ucrt-ubuntu-22.04-x86_64 llvm-mingw
 
       - name: Export LLVM MinGW env
         run: |
-          echo "LLVM_MINGW=$(pwd)/llvm-mingw" >> $GITHUB_ENV
-          echo "PATH=$(pwd)/llvm-mingw/bin:$PATH" >> $GITHUB_ENV
-          echo "PKG_CONFIG_PATH=$(pwd)/llvm-mingw/aarch64-w64-mingw32/lib/pkgconfig" >> $GITHUB_ENV
-          echo "PKG_CONFIG_LIBDIR=$(pwd)/llvm-mingw/aarch64-w64-mingw32/lib/pkgconfig" >> $GITHUB_ENV
+          echo "LLVM_MINGW=${LLVM_MINGW}" >> $GITHUB_ENV
+          echo "PATH=${LLVM_MINGW}/bin:$PATH" >> $GITHUB_ENV
+          echo "PKG_CONFIG_PATH=${LLVM_MINGW}/aarch64-w64-mingw32/lib/pkgconfig" >> $GITHUB_ENV
+          echo "PKG_CONFIG_LIBDIR=${LLVM_MINGW}/aarch64-w64-mingw32/lib/pkgconfig" >> $GITHUB_ENV
 
       - name: Clone Wine source
         run: |
           git clone --depth 1 --branch "wine-11.1" https://gitlab.winehq.org/wine/wine.git wine-src
 
-      - name: Configure Wine build
+      - name: Build Wine tools for cross-compilation
+        working-directory: wine-src
+        run: |
+          mkdir -p wine-tools-build
+          make tools DESTDIR=$PWD/wine-tools-build -j$(nproc)
+
+      - name: Configure Wine cross-build
         working-directory: wine-src
         run: |
           export CC="clang --target=aarch64-w64-mingw32 --sysroot=$LLVM_MINGW"
@@ -56,9 +63,9 @@ jobs:
           export AR=aarch64-w64-mingw32-ar
           export LD=aarch64-w64-mingw32-llvm-ld
           export RANLIB=aarch64-w64-mingw32-ranlib
-          export CFLAGS="-O2 -fno-plt"
+          export CFLAGS="-O3 -fno-plt -march=armv8.2-a+fp16+dotprod -mtune=cortex-x2 -funroll-loops"
           export CXXFLAGS="$CFLAGS"
-          export LDFLAGS="-fuse-ld=lld"
+          export LDFLAGS="-fuse-ld=lld -Wl,-O1"
 
           ./configure \
             --host=aarch64-w64-mingw32 \
@@ -66,17 +73,16 @@ jobs:
             --with-mingw=clang \
             --disable-tests \
             --without-x \
-            --prefix=/usr
+            --prefix=/usr \
+            --with-wine-tools=$PWD/wine-tools-build/usr/bin
 
       - name: Build Wine
         working-directory: wine-src
-        run: |
-          make -j$(nproc)
+        run: make -j$(nproc)
 
       - name: Install Wine
         working-directory: wine-src
-        run: |
-          make DESTDIR=$PWD/artifact install
+        run: make DESTDIR=$PWD/artifact install
 
       - name: Package .wcp
         run: |
